# qplib_dev

./: .coverage  .gitignore  LICENSE  dev.ipynb  interactive_demo.ipynb  prototyping.ipynb  pyproject.toml  readme.md  testing.ipynb  vsc_keybindings.md
.github/workflows/: python-package.yml  run_tests.yml
data/: df.xlsx  df_gpt.xlsx  df_new.xlsx  df_old.xlsx
qplib/: __init__.py  _diff.py  deprecated_qlang_no_mask.py  deprecated_qlang_old.py  diffing.py  excel.py  pandas.py  pd_query.py  pd_util.py  qlang.1.py  qlang.2.py  qlang.py  qlang_old.py  qlang_v2.py  qlang_v3.py  types.py  util.py  xlsx.py
qplib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qplib/data/: symbols.csv  symbols.xlsx
tests/: deprecated_test_qlang_no_mask.py  test_days_between.py  test_deduplicate.py  test_diff.py  test_embed.py  test_fetch.py  test_format.py  test_log.py  test_match.py  test_merge.py  test_qlang.py  test_qlang_v3.py  test_report.xml  test_save_load.py  test_shell_wrappers.py  test_types.py
tests/__pycache__/: test_types.cpython-313-pytest-8.3.3.pyc.13428  test_types.cpython-313-pytest-8.3.3.pyc.31804
tests/test/: df1.xlsx
