
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qplib"
version = "0.2.6"
description = "query and pandas utilities library"
readme = "README.md"
authors = [{ name = "martin v", email = "martinv16248@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = ["pandas", "query", "utility"]
dependencies = [
    "pandas",
    "numpy",
    "IPython",
    "ipywidgets",
    "jinja2",
    "openpyxl",
    "jedi>=0.16",
    "tomli",
]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/MartinVoelkl94/qplib"

[tool.setuptools.packages.find]
include = ["qplib*"]
exclude = ["data*", "test*", "archive*"]


