
[build-system]
requires      = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
    "wheel"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "qplib"
version = "0.8.2"
description = "query language for pandas"
readme = "README.md"
authors = [{ name = "martin v", email = "martinv16248@gmail.com" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = ["pandas", "query", "utility"]
dependencies = [
    "pandas",
    "numpy",
    "IPython",
    "ipywidgets",
    "jinja2",
    "openpyxl",
    "jedi>=0.16",
    "tomli",
]
requires-python = ">=3.10"


[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
    "faker",
    "freezegun",
    "ipykernel",
]


[project.urls]
Repository = "https://github.com/MartinVoelkl94/qplib"

[tool.setuptools.packages.find]
include = ["qplib*"]
exclude = ["data*", "tests*", "archive*"]


